# Nova

./: .clang-format  .gitignore  CMakeLists.txt  README.md
CMake/: CompilerFlags.cmake
Samples/: CMakeLists.txt
Samples/01_Framework/: CMakeLists.txt  main.cpp
Source/Nova/: CMakeLists.txt  Nova.hpp
Source/Nova/Base/: Application.cpp  Application.hpp  Base.cpp  Base.hpp  Defines.hpp  Enums.hpp  Error.cpp  Error.hpp  Inputs.hpp  Object.cpp  Object.hpp  Windows.cpp  Windows.hpp
Source/Nova/Graphics/: BlendState.cpp  BlendState.hpp  Formats.cpp  Formats.hpp  NativeFormats.hpp
Source/Nova/Math/: Bit.hpp  Check.hpp  Common.hpp  Constants.hpp  Float.hpp  Geometry.hpp  Hash.hpp  Math.hpp  Matrix.hpp  Quaternion.hpp  Random.hpp  Transform.hpp  TypeHash.hpp  Vector.hpp
Source/Nova/Math/Geometry/: Bounds.hpp  Frame.hpp  Intersect.hpp  Ray.hpp  Triangle.hpp
Source/Nova/Math/Matrix/: Matrix2x2.hpp  Matrix2x3.hpp  Matrix2x4.hpp  Matrix3x2.hpp  Matrix3x3.hpp  Matrix3x4.hpp  Matrix4x2.hpp  Matrix4x3.hpp  Matrix4x4.hpp  MatrixCommon.hpp  MatrixTransform.hpp  MatrixType.hpp
Source/Nova/Math/Quaternion/: Quaternion.hpp  QuaternionCommon.hpp  QuaternionTransform.hpp
Source/Nova/Math/Vector/: Vector1.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp  VectorCommon.hpp  VectorTransform.hpp  VectorType.hpp
Source/Nova/Utils/: Assert.hpp  ClassModifier.hpp  Logger.cpp  Logger.hpp  Memory.hpp  Profiler.hpp  TaskFlow.hpp  Terminal.hpp
Tests/: CMakeLists.txt
Tests/Base/: BaseTest.cpp
Tests/Math/: BitTest.cpp  CommonTest.cpp  ConstantTest.cpp  FloatTest.cpp  GeometryTest.cpp  PolynomialTest.cpp  TransformTest.cpp  VectorTest.cpp
Tests/Utils/: LoggerTest.cpp  TerminalTest.cpp  ThirdPartyTest.cpp
